--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.android.support:support-annotations:26.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
