--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".GarbageCollectorRegistrationActivity" />
         <activity android:name=".HomeownerRegistrationActivity" />
+        <activity android:name=".HomeownerRegistrationMap" />
     </application>
 
 </manifest>
